--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install",
     "build": "tsc",
     "postinstall": "npm run build"
-
   },
   "keywords": [],
   "author": "",
@@ -18,12 +17,10 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/node": "^17.0.23",
     "@types/uuid": "^8.3.4",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "ts-node": "^10.7.0"
   },
   "dependencies": {
     "apollo-server-express": "^3.6.7",
-    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -34,8 +31,9 @@
     "mongoose": "^6.2.9",
     "nodemailer": "^6.7.3",
     "socket.io": "^4.4.1",
-    "socket.io-client": "^4.4.1",
-    "uuid": "^8.3.2"
+    "typescript": "^4.6.3"
   },
-  "engines": { "node": "16.14.0" }
+  "engines": {
+    "node": "16.14.0"
+  }
 }
