--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^6.2.9",
     "nodemailer": "^6.7.3",
     "socket.io": "^4.4.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "16.14.0"
