--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node backend/dist/server.js",
     "dev": "nodemon backend/src/server.ts",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend",
     "build": "tsc",
     "postinstall": "npm run build"
   },
